--- a/SSD Assignment - Banking Application/SSD Assignment - Banking Application.csproj
+++ b/SSD Assignment - Banking Application/SSD Assignment - Banking Application.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="7.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
